# mojo_opset

./: README.md  test.py  test_hang.py
.github/workflows/: ascend_accuracy_ci.yml  iluvatar_accuracy_ci.yml
docs/: debug_suite.md
mojo_opset/: __init__.py
mojo_opset/backends/: __init__.py
mojo_opset/backends/ixformer/operators/: normalization.py
mojo_opset/backends/torch_npu/operators/: attention.py  gemm.py  position_embedding.py
mojo_opset/backends/ttx/kernels/: __init__.py  utils.py
mojo_opset/backends/ttx/kernels/ilu/: layernorm.py  rmsnorm.py  utils.py
mojo_opset/backends/ttx/kernels/mlu/: __init__.py  swa.py  utils.py
mojo_opset/backends/ttx/kernels/npu/: mrope.py  (+5 more)
mojo_opset/backends/ttx/operators/: attention.py  position_embedding.py
mojo_opset/core/: __init__.py  backend_registry.py  function.py  operator.py
mojo_opset/core/functions/: position_embedding.py
mojo_opset/core/operators/: attention.py  compute_with_comm.py  embedding.py  gemm.py  kv_cache.py  moe.py  normalization.py  position_embedding.py  quantize.py  sampling.py
mojo_opset/modeling/: config.py  utils.py
mojo_opset/utils/: debugger.py  platform.py
tests/: utils.py
tests/accuracy/: conftest.py
tests/accuracy/operators/: test_attention.py  test_compute_with_comm.py  test_embedding.py  test_gemm.py  test_kv_cache.py  test_moe.py  test_normalization.py  test_position_embedding.py  test_quantize.py  test_sampling.py
tests/base/: test_debug_utils.py  test_plugin_autoload.py
tests/base/plugin/: mojo_opset_test_plugin.py  pyproject.toml
tests/perf/: test_sampling.py
